crates/products/bennu/jsp-grammar/test/corpus/jsp.txt
================================================================================
taglib directive
================================================================================
<%@ taglib prefix="s" uri="/struts-tags" %>
--------------------------------------------------------------------------------

(document
  (jsp_directive))

================================================================================
jsp comment
================================================================================
<%-- a comment --%>
--------------------------------------------------------------------------------

(document
  (jsp_comment))

================================================================================
scriptlet declaration expression
================================================================================
<% code %>
<%! decl %>
<%= expr %>
--------------------------------------------------------------------------------

(document
  (jsp_scriptlet)
  (text)
  (jsp_declaration)
  (text)
  (jsp_expression))

================================================================================
namespaced open and close tags
================================================================================
<c:if test="x"></c:if>
--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_value_double
        (attribute_fragment))))
  (end_tag
    (tag_name)))

================================================================================
self closing tag with OGNL attribute
================================================================================
<s:hidden name="x" value="%{prov}"/>
--------------------------------------------------------------------------------

(document
  (self_closing_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_value_double
        (attribute_fragment)))
    (attribute
      (attribute_name)
      (quoted_value_double
        (ognl_expression)))))

================================================================================
EL in text
================================================================================
Hello ${user.name}!
--------------------------------------------------------------------------------

(document
  (text)
  (el_expression)
  (text))

================================================================================
deferred EL in text
================================================================================
x #{bean.y} z
--------------------------------------------------------------------------------

(document
  (text)
  (el_expression)
  (text))

================================================================================
script element with raw JS
================================================================================
<script>var i = a<b;</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (script_tag)
    (script_content)
    (script_tag)))

================================================================================
style element with raw CSS
================================================================================
<style>.a { color: red; }</style>
--------------------------------------------------------------------------------

(document
  (style_element
    (style_tag)
    (style_content)
    (style_tag)))

================================================================================
cdata
================================================================================
<![CDATA[ raw < stuff ]]>
--------------------------------------------------------------------------------

(document
  (cdata))

================================================================================
html comment
================================================================================
<!-- hi -->
--------------------------------------------------------------------------------

(document
  (html_comment))

================================================================================
doctype
================================================================================
<!DOCTYPE html>
--------------------------------------------------------------------------------

(document
  (doctype))

================================================================================
stray less-than in text
================================================================================
a < b
--------------------------------------------------------------------------------

(document
  (text))

================================================================================
single quoted attribute
================================================================================
<a href='/x.action'>go</a>
--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_value_single
        (attribute_fragment_sq))))
  (text)
  (end_tag
    (tag_name)))

================================================================================
struts list with single quotes inside double quotes
================================================================================
<s:select list="maps['p']"/>
--------------------------------------------------------------------------------

(document
  (self_closing_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_value_double
        (attribute_fragment)))))

================================================================================
nested taglib tag inside an attribute value
================================================================================
<a href="<wp:action path="/x.action" />">go</a>
--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_value_double
        (self_closing_tag
          (tag_name)
          (attribute
            (attribute_name)
            (quoted_value_double
              (attribute_fragment)))))))
  (text)
  (end_tag
    (tag_name)))

================================================================================
scriptlet expression inside an attribute value
================================================================================
<input value="<%= dflt %>"/>
--------------------------------------------------------------------------------

(document
  (self_closing_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_value_double
        (jsp_expression)))))
